--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ button {
 .banner_bg_main {
     width: 100%;
     float: left;
-    background-image: url(t.jpg);
+    background-image: url('t.jpgs');
     height: auto;
     background-size: 100%;
     background-repeat: no-repeat;
